fix: :bug: fixed wrong color value

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
 
     --brand-dark-purple: 256 59% 9%;
     --brand-pale-purple: 285 9% 36%;
-    --brand-background: 256 59%;
+    --brand-background: 256 59% 9%;
   }
 }
 
